--- a/index.html
+++ b/index.html
@@ -1,2 +1,47 @@
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+table {
+  border-collapse: collapse;
+}
 
-<h1>Hello</h1>
+td, th {
+  border: 1px solid #dddddd;
+}
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+</style>
+</head>
+<body>
+
+<h1 style="background-color:Violet;">Links to class</h1>
+<p>Here are the links to the calendars of the class. Click in the names to access.</p>
+
+<table style="width:100%">
+  <tr>
+    <td><a href="./1a.html">1ºA class</a></td>
+    <td><a href="./1b.html">1ºB class</a></td>
+    <td><a href="./1c.html">1ºC class</a></td>
+  </tr>
+  <tr>
+    <td><a href="./2a.html">2ºA class</a></td>
+    <td><a href="./2b.html">2ºB class</a></td>
+    <td><a href="./2c.html">2ºC class</a></td>
+  </tr>
+  <tr>
+    <td><a href="./3a.html">3ºA class</a></td>
+    <td><a href="./3b.html">3ºB class</a></td>
+    <td><a href="./3c.html">3ºC class</a></td>
+  </tr>
+  <tr>
+    <td><a href="./4a.html">4ºA class</a></td>
+    <td><a href="./4b.html">4ºB class</a></td>
+    <td><a href="./4c.html">4ºC class</a></td>
+  </tr>
+</table>
+
+</body>
+</html>
